Fix spacing in current weather container and day container

--- a/src/style.css
+++ b/src/style.css
@@ -195,7 +195,7 @@ aside img{
 .bottom-info{
     display: flex;
     flex-direction: column;
-    gap: 0.9rem;
+    gap: 0.5rem;
     font-size: 1.05rem;
 }
 
@@ -203,8 +203,8 @@ aside img{
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
-    gap: 1.25rem;
-    margin-top: 3rem;
+    gap: 1.35rem;
+    margin-top: 2rem;
 }
 
 .extra-info-container h4 {
@@ -315,6 +315,7 @@ main h2{
     flex-direction: column;
     gap: 1.5rem;
     width: 100%;
+    padding: 1.25rem;
 }
 
 .day-top{
@@ -343,7 +344,7 @@ main h2{
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    margin-top: 1rem;
+    margin-top: 1.5rem;
 }
 
 .day-bottom p {
